Commit 23/7/2020 Replaced methods in business class and added new developed scripts.

--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -17,7 +17,7 @@ WebPWASanityScript=Y
 
 #-------Android Applicaster--------
 
-Android_AppLaunch=Y
+Android_AppLaunch=N
 Android_Onboarding_Suite1=Y
 Android_Onboarding_Suite2=Y
 Android_Onboarding_Suite3=Y
@@ -25,3 +25,4 @@ Android_Subscription=Y
 Android_Search=Y
 DeepLinkValidation=Y
 AndroidTest=Y
+Android_LandingPage=Y
