--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -24,5 +24,8 @@ Android_Onboarding_Suite3=Y
 Android_Subscription=Y
 Android_Search=Y
 DeepLinkValidation=Y
-AndroidTest=Y
+AndroidTest=N
 Android_LandingPage=N
+Android_LandingScreen_BottomNavigation=Y
+Android_LandingScreen_TopNavigatione=Y
+Android_Downloads=Y
