--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,12 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.6</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.applitools/eyes-selenium-java -->
 		<dependency>
