--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -28,3 +28,4 @@ AndroidTest=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigation=Y
 Android_Downloads=Y
+Android_MoreScreen=Y
