--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -28,4 +28,5 @@ AndroidTest=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigation=Y
 Android_Downloads=Y
+Android_ListingScreen=Y
 Android_MoreScreen=Y
