--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -24,9 +24,10 @@ Android_Onboarding_Suite3=Y
 Android_Subscription=Y
 Android_Search=Y
 DeepLinkValidation=Y
-AndroidTest=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigation=Y
 Android_Downloads=Y
 Android_ListingScreen=Y
+Android_Settings=Y
+Android_ExitPop=Y
 Android_MoreScreen=Y
