--- a/properties/AppPackageActivity.properties
+++ b/properties/AppPackageActivity.properties
@@ -14,6 +14,7 @@ zeeActivity = com.applicaster.componentsapp.IntroActivity
 zeeVersion = 18.0.0.12
 
 URL = https://newpwa.zee5.com/
+DriverVersion = 85.0.4183.83
 #URL = https://www.zee5.com/
 #URL = https://voot.com/
 #URL = https://www.bgr.in/myhtml/test/kaltura.php
