--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 			<url>https://cloud.experitest.com/repo/</url>
 			<layout>default</layout>
 		</repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>bintray-epam-reportportal</id>
+			<name>bintray</name>
+			<url>http://dl.bintray.com/epam/reportportal</url>
+		</repository>
 	</repositories>
 	<packaging>jar</packaging>
 	<name>SeetestAutomation</name>
@@ -147,14 +155,14 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.4.11</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
@@ -168,7 +176,7 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.6</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -181,6 +189,36 @@
 			<artifactId>eyes-images-java3</artifactId>
 			<version>3.158.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.epam.reportportal</groupId>
+			<artifactId>agent-java-testng</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.epam.reportportal</groupId>
+			<artifactId>logger-java-log4j</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.10.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -192,6 +230,10 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<property>
+						<name>listener</name>
+						<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
+					</property>
 				</configuration>
 			</plugin>
 			<!-- Below plug-in is used to execute tests -->
@@ -200,15 +242,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
-					<!-- <systemPropertyVariables>
-						<UserType>${UserType}</UserType>
-						<runMode>${runMode}</runMode>
-						<runModule>${runModule}</runModule>
-					</systemPropertyVariables>
-					<suiteXmlFiles>
-						TestNG suite XML files
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-					</suiteXmlFiles> -->
+					<!-- <systemPropertyVariables> <UserType>${UserType}</UserType> <runMode>${runMode}</runMode> 
+						<runModule>${runModule}</runModule> </systemPropertyVariables> <suiteXmlFiles> 
+						TestNG suite XML files <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> </suiteXmlFiles> -->
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile>
