--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -17,17 +17,15 @@ WebPWASanityScript=Y
 
 #-------Android Applicaster--------
 
-Android_AppLaunch=N
+Android_AppLaunch=Y
 Android_Onboarding_Suite1=Y
 Android_Onboarding_Suite2=Y
 Android_Onboarding_Suite3=Y
 Android_Subscription=Y
 Android_Search=Y
 DeepLinkValidation=Y
+AndroidTest=N
+Android_LandingPage=N
 Android_LandingScreen_BottomNavigation=Y
-Android_LandingScreen_TopNavigation=Y
+Android_LandingScreen_TopNavigatione=Y
 Android_Downloads=Y
-Android_ListingScreen=Y
-Android_Settings=Y
-Android_ExitPop=Y
-Android_MoreScreen=Y
