--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -29,3 +29,4 @@ Android_LandingPage=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigatione=Y
 Android_Downloads=Y
+Android_MoreScreen=Y
