--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -30,3 +30,4 @@ Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigatione=Y
 Android_Downloads=Y
 Android_MoreScreen=Y
+Android_ListingScreen=Y
