--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -15,6 +15,7 @@ AndroidPWASanityScript=Y
 WebPWASanityScript=Y
 
 
+#ENVIRONMENT PROPERTIES FILE
 #-------Android Applicaster--------
 
 Android_AppLaunch=Y
@@ -24,7 +25,6 @@ Android_Onboarding_Suite3=Y
 Android_Subscription=Y
 Android_Search=Y
 DeepLinkValidation=Y
-AndroidTest=N
 Android_LandingPage=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigatione=Y
@@ -32,3 +32,6 @@ Android_Downloads=Y
 Android_MoreScreen=Y
 Android_ListingScreen=Y
 Android_Settings=Y
+Android_Player_PotraitMode=Y
+Android_Player_LandscapeMode=Y
+Android_PlayerScreen = Y
