--- a/src/main/resources/reportportal.properties
+++ b/src/main/resources/reportportal.properties
@@ -1,7 +1,7 @@
 rp.endpoint = 
 rp.uuid = 
-rp.launch = 
-rp.project = 
+rp.launch = igs_user_TEST_EXAMPLE
+rp.project = zee5_frontend
 
 #NOT REQUIRED
 #rp.enable = true
