--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
 			<artifactId>logger-java-log4j</artifactId>
 			<version>4.0.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
@@ -219,6 +219,7 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.10.0</version>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -231,9 +232,9 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<property>
-						<name>listener</name>
-						<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
-					</property>
+							<name>listener</name>
+							<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
+						</property>
 				</configuration>
 			</plugin>
 			<!-- Below plug-in is used to execute tests -->
@@ -247,6 +248,7 @@
 						TestNG suite XML files <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> </suiteXmlFiles> -->
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
+					<!-- 	<suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
 						<suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
