--- a/src/main/resources/reportportal.properties
+++ b/src/main/resources/reportportal.properties
@@ -1,5 +1,5 @@
-rp.endpoint = 
-rp.uuid = 
+#rp.endpoint = https://reportportal.zee5.com
+#rp.uuid = c39b33b9-555e-46e7-b866-a14d0c0b3e06
 rp.launch = igs_user_TEST_EXAMPLE
 rp.project = zee5_frontend
 
@@ -11,3 +11,4 @@ rp.project = zee5_frontend
 #rp.mode = DEFAULT
 #rp.skipped.issue = true
 #rp.batch.size.logs = 20
+
