--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>Zee5</groupId>
-	<artifactId>Zee5</artifactId>
+	<artifactId>Zee5_</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<repositories>
 		<repository>
@@ -220,6 +220,13 @@
 			<version>2.10.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.13.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -232,9 +239,9 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<property>
-							<name>listener</name>
-							<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
-						</property>
+						<name>listener</name>
+						<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
+					</property>
 				</configuration>
 			</plugin>
 			<!-- Below plug-in is used to execute tests -->
@@ -248,7 +255,7 @@
 						TestNG suite XML files <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> </suiteXmlFiles> -->
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
-					<!-- 	<suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
+						<!-- <suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
 						<suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
