--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,13 @@
 			<version>2.13.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
