Commit 29/9/2020 Modification in applicaster

--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -37,3 +37,7 @@ Android_Player_LandscapeMode=Y
 Android_PlayerScreen = Y
 Android_BeforeTV=Y
 Android_ClubPack=Y
+
+
+#----------WEBPWA MIXPANEL-----
+WebPWAMixpanelScript=Y
