--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -35,8 +35,11 @@ Android_Settings=Y
 Android_Player_PotraitMode=Y
 Android_Player_LandscapeMode=Y
 Android_PlayerScreen = Y
+Android_ExitPop=Y
 Android_BeforeTV=Y
 Android_ClubPack=Y
+Android_UserSessionManagement=Y
+Android_Consumption_Screen=Y
 
 
 #----------WEBPWA MIXPANEL-----
@@ -44,3 +47,6 @@ WebPWAMixpanelScript=Y
 
 #-------------TV--------------
 tvZee5ATv=Y
+
+#----------Android MIXPANEL-----
+ApplicasterMixpanelScript=Y
