--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -39,3 +39,12 @@ String = Unique ID \
 , Landing Page \
 , hasEduauraa \
 , isEduauraa
+
+home = homepage
+Movies = movies
+Shows = tvshows
+News = 626
+Kids = 3673
+Music = 2707
+ZEE5Original = zeeoriginals
+TrendingSearch	= conviva-trending
