--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -1,6 +1,6 @@
 Boolean = isTalamoos, Ad isEmpty, Subtitles, Search Success, Current Subscription, Success, isPWA
 
-Integer = Pack Duration, Load Time, Cost, Content Duration, Episode No, Carousal ID, Vertical Index, Horizontal Index, NUTS Value
+Integer = Pack Duration, Load Time, Cost, Content Duration, Episode No, Vertical Index, Horizontal Index, NUTS Value
 
 List = Old Content Language, New Content Language
 
