--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -45,6 +45,10 @@ Android_Consumption_Screen=Y
 #----------WEBPWA MIXPANEL-----
 WebPWAMixpanelScript=Y
 
+#-----------MPWA MIXPANEL------
+AndroidPWAMixpanelScript=Y
+
+
 #-------------TV--------------
 tvZee5ATv=Y
 
