--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -52,5 +52,13 @@ AndroidPWAMixpanelScript=Y
 #-------------TV--------------
 tvZee5ATv=Y
 
+
 #----------Android MIXPANEL-----
+ZNAMixpanel_VideoView=Y
+ZNAMixpanel_VideoExit=Y
+ZNAMixpanel_PlayerViewChanged=Y
+ApplicasterMixpanel_VideoWatchDuration=Y
 ApplicasterMixpanelScript=Y
+ApplicasterMixpanel_Journey=Y
+ApplicasterMixpanel_AdView=Y
+ApplicasterMixpanel_AdInitialized=Y
