--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -53,12 +53,14 @@ AndroidPWAMixpanelScript=Y
 tvZee5ATv=Y
 
 
-#----------Android MIXPANEL-----
+#------Android MIXPANEL--------
 ZNAMixpanel_VideoView=Y
 ZNAMixpanel_VideoExit=Y
 ZNAMixpanel_PlayerViewChanged=Y
-ApplicasterMixpanel_VideoWatchDuration=Y
-ApplicasterMixpanelScript=Y
-ApplicasterMixpanel_Journey=Y
-ApplicasterMixpanel_AdView=Y
-ApplicasterMixpanel_AdInitialized=Y
+ZNAMixpanel_AdClick=Y
+ZNAMixpanel_AdWatchDuration=Y
+ZNAMixpanel_VideoWatchDuration=Y
+ZNAMixpanelScript=Y
+ZNAMixpanel_Journey=Y
+ZNAMixpanel_AdView=Y
+ZNAMixpanel_AdInitialized=Y
