--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -64,3 +64,6 @@ ZNAMixpanelScript=Y
 ZNAMixpanel_Journey=Y
 ZNAMixpanel_AdView=Y
 ZNAMixpanel_AdInitialized=Y
+ZNAMixpanelScript_Onboarding=Y
+ZNAMixpanel_Resume=Y
+ZNAMixpanel_Pause=Y
