--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -69,4 +69,6 @@ ZNAMixpanel_Resume=Y
 ZNAMixpanel_Pause=Y
 ZNAMixpanel_ScrubSeek=Y
 ZNAMixpanel_QualityChange=Y
+ZNAMixpanel_AutoSeek=Y
+ZNAMixpanel_DownloadStart=Y
 
