--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -71,4 +71,6 @@ ZNAMixpanel_ScrubSeek=Y
 ZNAMixpanel_QualityChange=Y
 ZNAMixpanel_AutoSeek=Y
 ZNAMixpanel_DownloadStart=Y
+ZNAMixpanel_AudioLanguageChange=Y
+ZNAMixpanel_SubtitleLanguageChange=Y
 
