--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -68,6 +68,7 @@ ZNAMixpanelScript_Onboarding=Y
 ZNAMixpanel_Resume=Y
 ZNAMixpanel_Pause=Y
 ZNAMixpanel_ScrubSeek=Y
+ZNAMixpanel_SkipIntro=Y
 ZNAMixpanel_QualityChange=Y
 ZNAMixpanel_AutoSeek=Y
 ZNAMixpanel_DownloadStart=Y
