--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -54,6 +54,8 @@ AndroidPWAMixpanelScript=Y
 tvZee5ATv=Y
 
 
+
+
 #------Android MIXPANEL--------
 ZNAMixpanel_VideoView=Y
 ZNAMixpanel_VideoExit=Y
@@ -75,4 +77,8 @@ ZNAMixpanel_AutoSeek=Y
 ZNAMixpanel_DownloadStart=Y
 ZNAMixpanel_AudioLanguageChange=Y
 ZNAMixpanel_SubtitleLanguageChange=Y
+
+
+#-----Android DFP---------
+AMDDFPTestScript=Y
 
