--- a/properties/Execution.properties
+++ b/properties/Execution.properties
@@ -4,7 +4,7 @@ DEVICE_NAME_ANDROID=VQG3Y19124004927
 
 TIMEOUT=10
 #HOST_IP=cloud.seetest.io
-HOST_IP=appiumserver.pagekite.me
+HOST_IP=c8bde5460513.ngrok.io
 #HOST_PORT=443
 HOST_PORT=80
 RETRY_COUNT=5
