--- a/properties/Execution.properties
+++ b/properties/Execution.properties
@@ -4,8 +4,9 @@ DEVICE_NAME_ANDROID=VQG3Y19124004927
 
 TIMEOUT=10
 #HOST_IP=cloud.seetest.io
-HOST_IP=appiumserver.c8bde5460513.ngrok.io
+#HOST_IP=appiumserver.c8bde5460513.ngrok.io
+HOST_IP=localhost
 #HOST_PORT=443
-HOST_PORT=80
+HOST_PORT=7409
 RETRY_COUNT=5
 APP_TIMEOUT=10
