--- a/properties/Execution.properties
+++ b/properties/Execution.properties
@@ -5,8 +5,8 @@ DEVICE_NAME_ANDROID=VQG3Y19124004927
 TIMEOUT=10
 #HOST_IP=cloud.seetest.io
 #HOST_IP=appiumserver.pagekite.me
-HOST_IP=c8bde5460513.ngrok.io.localhost
-HOST_PORT=443
+HOST_IP=localhost
+HOST_PORT=4723
 #HOST_PORT=80
 RETRY_COUNT=5
 APP_TIMEOUT=10
