--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,7 @@
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<!-- <suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
-						<suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile>
+						<suiteXmlFile>pwaSanityAndroid.xml</suiteXmlFile>
 						<!-- <suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile> -->
 					</suiteXmlFiles>
 				</configuration>
