--- a/pom.xml
+++ b/pom.xml
@@ -251,17 +251,17 @@
 				<version>2.20</version>
 				<configuration>
 					<systemPropertyVariables>
-						<!-- <UserType>${UserType}</UserType>
+						 <UserType>${UserType}</UserType>
 						<BrowserType>${BrowserType}</BrowserType>
-						<url>${url}</url>  -->
-						<!-- <runMode>${runMode}</runMode>
-						<runModule>${runModule}</runModule> -->
+						<url>${url}</url>
+						 <runMode>${runMode}</runMode>
+						<runModule>${runModule}</runModule> 
 					</systemPropertyVariables>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<!-- <suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
-						<suiteXmlFile>pwaSanityAndroid.xml</suiteXmlFile>
-						<!-- <suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile> -->
+						<!-- <suiteXmlFile>pwaSanityAndroid.xml</suiteXmlFile> -->
+						 <suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
