--- a/properties/Execution.properties
+++ b/properties/Execution.properties
@@ -4,10 +4,10 @@ DEVICE_NAME_ANDROID=VQG3Y19124004927
 
 TIMEOUT=10
 #HOST_IP=cloud.seetest.io
-HOST_IP=appiumserver.pagekite.me
-#HOST_IP=localhost
+#HOST_IP=appiumserver.pagekite.me
+HOST_IP=localhost
 #HOST_IP=4b7bed353dc6.ngrok.io
 #HOST_PORT=4701
-HOST_PORT=80
+HOST_PORT=4723
 RETRY_COUNT=5
 APP_TIMEOUT=10
