--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -45,10 +45,11 @@ Android_Consumption_Screen=Y
 
 #----------WEBPWA MIXPANEL-----
 WebPWAMixpanelScript=Y
+HL_PWA_WEB_Mixpanel=Y
 
 #-----------MPWA MIXPANEL------
 AndroidPWAMixpanelScript=Y
-
+HL_MPWA_Mixpanel=Y
 
 #-------------TV--------------
 tvZee5ATv=Y
@@ -81,4 +82,9 @@ ZNAMixpanel_SubtitleLanguageChange=Y
 
 #-----Android DFP---------
 AMDDFPTestScript=Y
+
+AndroidPWADFPScript=Y
+WebPWADFPScript=Y
+
+
 
