--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>4.1.1</version>
@@ -77,11 +83,8 @@
 			<version>3.1.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.9.10</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.testng</groupId> <artifactId>testng</artifactId> 
+			<version>6.9.10</version> </dependency> -->
 
 		<dependency>
 			<groupId>log4j</groupId>
@@ -189,8 +192,8 @@
 			<artifactId>eyes-images-java3</artifactId>
 			<version>3.158.9</version>
 		</dependency>
-
-		<!-- <dependency>
+		<!-- Report portal Dependency -->
+		<dependency>
 			<groupId>com.epam.reportportal</groupId>
 			<artifactId>agent-java-testng</artifactId>
 			<version>5.0.7</version>
@@ -206,7 +209,7 @@
 			<groupId>com.epam.reportportal</groupId>
 			<artifactId>logger-java-log4j</artifactId>
 			<version>5.0.1</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -217,15 +220,30 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.13.1</version>
+			<version>2.13.3</version>
 		</dependency>
 
+		<!-- <dependency> <groupId>com.epam.reportportal</groupId> <artifactId>agent-java-testng</artifactId> 
+			<version>5.0.8</version> </dependency> TODO Leave only one dependency, depends 
+			on what logger you use: <dependency> <groupId>com.epam.reportportal</groupId> 
+			<artifactId>logger-java-logback</artifactId> <version>5.0.3</version> </dependency> 
+			<dependency> <groupId>com.epam.reportportal</groupId> <artifactId>logger-java-log4j</artifactId> 
+			<version>5.0.3</version> </dependency> -->
+
+		<!-- <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> 
+			<version>1.2.3</version> </dependency> -->
+
+		<!-- <dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-api</artifactId> 
+			<version>2.12.1</version> </dependency> <dependency> <groupId>org.apache.logging.log4j</groupId> 
+			<artifactId>log4j-core</artifactId> <version>2.12.1</version> </dependency> -->
+
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId> 
+			<version>1.7.28</version> </dependency> <dependency> <groupId>org.apache.logging.log4j</groupId> 
+			<artifactId>log4j-slf4j-impl</artifactId> <version>2.12.1</version> </dependency> -->
+
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.13.2</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-slf4j-impl</artifactId> 
+			<version>2.13.3</version> </dependency> -->
 
 	</dependencies>
 	<build>
@@ -238,10 +256,6 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					<property>
-						<name>listener</name>
-						<value>com.epam.reportportal.testng.ReportPortalTestNGListener</value>
-					</property>
 				</configuration>
 			</plugin>
 			<!-- Below plug-in is used to execute tests -->
@@ -250,18 +264,18 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
 					<systemPropertyVariables>
-						<!--  <UserType>${UserType}</UserType>
+						<UserType>${UserType}</UserType>
 						<BrowserType>${BrowserType}</BrowserType>
 						<url>${url}</url>
-						 <runMode>${runMode}</runMode>
-						<runModule>${runModule}</runModule>  -->
+						<!-- <runMode>${runMode}</runMode> <runModule>${runModule}</runModule> -->
 					</systemPropertyVariables>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<!-- <suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
-						<suiteXmlFile>pwaSanityAndroid.xml</suiteXmlFile>
-						 <!-- <suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile> -->
+						<!-- <suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile> -->
+						<suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
