--- a/pom.xml
+++ b/pom.xml
@@ -266,10 +266,10 @@
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<systemPropertyVariables>
-						<UserType>${UserType}</UserType>
+					<!--	<UserType>${UserType}</UserType>
 						<BrowserType>${BrowserType}</BrowserType>
 						<url>${url}</url>
-						<!-- <runMode>${runMode}</runMode> <runModule>${runModule}</runModule> -->
+						 <runMode>${runMode}</runMode> <runModule>${runModule}</runModule> -->
 					</systemPropertyVariables>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
