--- a/properties/AppPackageActivity.properties
+++ b/properties/AppPackageActivity.properties
@@ -20,8 +20,8 @@ prod = https://www.zee5.com/
 #URL = https://voot.com/
 #URL = https://www.bgr.in/myhtml/test/kaltura.php
 
-zeePackage = com.graymatrix.did
-zeeActivity = com.zee5.player.activities.SplashActivity
-zeeVersion = 14.14.2
-zeeapkfile = ATV_B_443_ProdDeb_Sp-17_v18.0.0.51.apk
+zeeTVPackage = com.graymatrix.did
+zeeTVActivity = com.zee5.player.activities.SplashActivity
+zeeTVVersion = 14.14.2
+zeeTVapkfile = ATV_B_443_ProdDeb_Sp-17_v18.0.0.51.apk
 
