--- a/src/main/resources/reportportal.properties
+++ b/src/main/resources/reportportal.properties
@@ -1,6 +1,6 @@
-#rp.endpoint = https://reportportal.zee5.com/
-#rp.uuid = c39b33b9-555e-46e7-b866-a14d0c0b3e06
-rp.launch = igs_user_TEST_EXAMPLE
+rp.endpoint = https://reportportal.zee5.com
+rp.uuid = 7423d9a9-348f-4988-8944-a500eb83c6f8
+rp.launch = igs_user_TEST_LAUNCH_ID
 rp.project = zee5_frontend
 
 #NOT REQUIRED
