--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -86,5 +86,8 @@ AMDDFPTestScript=Y
 AndroidPWADFPScript=Y
 WebPWADFPScript=Y
 
+ZNAMixpanel_OnboardingSuite=Y
+ZNAMixpanel_Journey=Y
+ZNAMixpanel_PlayerEvents=Y
 
 
