--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -43,10 +43,14 @@ String = Unique ID \
 , isEduauraa
 
 home = homepage
-Movies = movies
-Shows = tvshows
-News = 626
-Kids = 3673
-Music = 2707
-ZEE5Original = zeeoriginals
-TrendingSearch	= conviva-trending
+movies = movies
+shows = tvshows
+news = 626
+kids = 3673
+music = 2707
+zee5original = zeeoriginals
+trendingSearch	= conviva-trending
+play = 4603
+club = 5851
+premium = premiumcontents
+videos = videos
