--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -54,3 +54,14 @@ play = 4603
 club = 5851
 premium = premiumcontents
 videos = videos
+
+
+Kids_details = kids_movie_detail
+Music_details = music_videos_detail
+live_details = channel_detail
+movie_details = movie_detail
+Zee5Originals_details = zee5originals_detail
+Shows_details = show_detail
+episode_details = episode-detail
+
+
