--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -62,6 +62,6 @@ live_details = channel_detail
 movie_details = movie_detail
 Zee5Originals_details = zee5originals_detail
 Shows_details = show_detail
-episode_details = episode-detail
+episode_details = episode_detail
 
 
