--- a/pom.xml
+++ b/pom.xml
@@ -274,9 +274,9 @@
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<!-- <suiteXmlFile>${rp.launch}.xml</suiteXmlFile> -->
-						<!-- <suiteXmlFile>pwaSanityWeb.xml</suiteXmlFile> -->
+						<suiteXmlFile>pwaWebHLS.xml</suiteXmlFile>
 						<!-- <suiteXmlFile>${suiteXmlFile}.xml</suiteXmlFile> -->
-						<suiteXmlFile>pwaAndroidHLS.xml</suiteXmlFile>
+						<!-- <suiteXmlFile>pwaAndroidHLS.xml</suiteXmlFile> -->
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
