--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -59,7 +59,7 @@ videos = videos
 Kids_details = kids_movie_detail
 Music_details = music_videos_detail
 live_details = channel_detail
-movie_details = movie_detail
+movies_details = movie_detail
 Zee5Originals_details = zee5originals_detail
 Shows_details = show_detail
 episode_details = episode_detail
