--- a/properties/AppPackageActivity.properties
+++ b/properties/AppPackageActivity.properties
@@ -10,7 +10,8 @@ VodafoneVersion = 1.0.82
 
 #Android Applicaster
 zeePackage = com.graymatrix.did
-zeeActivity = com.applicaster.componentsapp.IntroActivity
+<!-- zeeActivity = com.applicaster.componentsapp.IntroActivity -->
+ zeeActivity = com.zee5.splash.SplashActivity
 zeeVersion = 18.0.0.38
 
 newpwa = https://newpwa.zee5.com/
