--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -56,12 +56,12 @@ premium = premiumcontents
 videos = videos
 
 
-Kids_details = kids_movie_detail
-Music_details = music_videos_detail
+kids_details = kids_movie_detail
+music_details = music_videos_detail
 live_details = channel_detail
 movies_details = movie_detail
-Zee5Originals_details = zee5originals_detail
-Shows_details = show_detail
+zee5originals_details = zee5originals_detail
+shows_details = show_detail
 episode_details = episode_detail
 
 
