--- a/pom.xml
+++ b/pom.xml
@@ -269,7 +269,8 @@
 					<!--	<UserType>${UserType}</UserType>
 						<BrowserType>${BrowserType}</BrowserType>
 						<url>${url}</url>
-						 <runMode>${runMode}</runMode> <runModule>${runModule}</runModule> -->
+						 <runMode>${runMode}</runMode> 
+						 <runModule>${runModule}</runModule> -->
 					</systemPropertyVariables>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
