--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -64,4 +64,9 @@ zee5originals_details = zee5originals_detail
 shows_details = show_detail
 episode_details = episode_detail
 
-
+tv_home = manualcol_2081341971
+tv_movies = manualcoll_160025695
+tv_shows = manualcol_1274139062
+tv_news = 626
+tv_premium = manualcoll_317983822
+tv_videos = manualcol_1852704674
