--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -70,3 +70,11 @@ tv_shows = manualcol_1274139062
 tv_news = 626
 tv_premium = manualcoll_317983822
 tv_videos = manualcol_1852704674
+
+
+tamil = ta
+hindi = hi
+bengali = bn
+kannada = kn
+malayalam = ml
+telugu = te
