--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -63,6 +63,7 @@ movies_details = movie_detail
 zee5originals_details = zee5originals_detail
 shows_details = show_detail
 episode_details = episode_detail
+video_details = video_detail
 
 tv_home = manualcol_2081341971
 tv_movies = manualcoll_160025695
