--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -25,11 +25,10 @@ Android_Onboarding_Suite2=Y
 Android_Onboarding_Suite3=Y
 Android_Subscription=Y
 Android_Search=Y
-DeepLinkValidation=Y
 Android_LandingPage=N
 Android_LandingScreen_BottomNavigation=Y
 Android_LandingScreen_TopNavigation=Y
-Android_Downloads=Y
+Android_DownloadsOld=N
 Android_MoreScreen=Y
 Android_ListingScreen=Y
 Android_Settings=Y
@@ -41,6 +40,10 @@ Android_BeforeTV=Y
 Android_ClubPack=Y
 Android_UserSessionManagement=Y
 Android_Consumption_Screen=Y
+Android_Downloads=Y
+AndroidApp_HLS=Y
+
+DeepLinkValidation=N
 
 
 #----------WEBPWA MIXPANEL-----
