--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -61,7 +61,7 @@ music_details = music_videos_detail
 live_details = channel_detail
 movies_details = movie_detail
 zee5originals_details = zee5originals_detail
-shows_details = show_detail
+tvshows_details = show_detail
 episode_details = episode_detail
 video_details = video_detail
 
