--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -79,3 +79,42 @@ bengali = bn
 kannada = kn
 malayalam = ml
 telugu = te
+
+
+#Subscription Details
+Sub_Next_Expiring_Pack = [0-11-1481_Premium Pack_SVOD]
+
+Sub_Next_Pack_Expiry_Date = 2021-06-10T05:29:59
+
+Sub_Latest_Subscription_Pack = 0-11-1481_Premium Pack_SVOD
+
+Sub_Latest_Subscription_Pack_Expiry = 2021-06-10T05:29:59
+
+Sub_Free_Trial_Expiry_Date = N/A
+
+Sub_Free_Trial_Package = N/A
+
+Sub_Pack_Duration = 90
+
+Sub_hasEduauraa = true
+
+Sub_HasRental = false
+
+#NonSubscribedUser
+NonSub_Next_Expiring_Pack = N/A
+
+NonSub_Next_Pack_Expiry_Date = N/A
+
+NonSub_Latest_Subscription_Pack = N/A
+
+NonSub_Latest_Subscription_Pack_Expiry = N/A
+
+NonSub_Free_Trial_Expiry_Date = N/A
+
+NonSub_Free_Trial_Package = N/A
+
+NonSub_Pack_Duration = N/A
+
+NonSub_hasEduauraa = true
+
+NonSub_HasRental = false
