--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -95,4 +95,19 @@ ZNAMixpanel_PlayerEvents=Y
 
 AndroidApp_PerformanceCheck=Y
 
-
+#---Onboarding---
+SkipRegistrationEvent=Y
+SkipLoginEvent=Y
+LogoutEvent=Y
+LoginScreenDisplayEvent=Y
+LoginInitiatedEvent=Y
+LoginResultEvent=Y
+TVAuthenticationScreenDisplayEvent=Y
+RegisterScreenDisplayEvent=Y
+RegistrationInitiatedEvent=Y
+RegistrationResultEvent=Y
+SubscriptionPageViewedEvent=Y
+SubscriptionSelectedEvent=Y
+PrepaidCodeResultEvent=Y
+PromoCodeResultEvent=Y
+SubscriptionCallInitiatedEvent=Y
