--- a/properties/MixpanelKeys.properties
+++ b/properties/MixpanelKeys.properties
@@ -65,6 +65,18 @@ tvshows_details = show_detail
 episode_details = episode_detail
 video_details = video_detail
 
+kids_view = kids_landing
+music_view = music_videos_landing
+live_view = channel_detail
+movies_view = movie_landing
+zee5originals_view = zee_originals_view all
+tvshows_view =  tv_shows_view_all
+video_view = video_landing
+home_view = home
+news_view= news_landing
+premium_view=premium
+zee_plex_view = zee_plex_landing
+
 tv_home = manualcol_2081341971
 tv_movies = manualcoll_160025695
 tv_shows = manualcol_1274139062
