--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -111,3 +111,7 @@ SubscriptionSelectedEvent=Y
 PrepaidCodeResultEvent=Y
 PromoCodeResultEvent=Y
 SubscriptionCallInitiatedEvent=Y
+SubscriptionCallReturnedEvent = Y 
+
+
+
