--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -42,6 +42,7 @@ Android_UserSessionManagement=Y
 Android_Consumption_Screen=Y
 Android_Downloads=Y
 AndroidApp_HLS=Y
+TasksAndDefects=Y
 
 DeepLinkValidation=N
 
@@ -55,8 +56,6 @@ AndroidPWAMixpanelScript=Y
 HL_MPWA_Mixpanel=Y
 
 #-------------TV--------------
-tvZee5ATv=Y
-
 Zee5TV=Y
 
 
