--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -80,6 +80,8 @@ ZNAMixpanel_AutoSeek=Y
 ZNAMixpanel_DownloadStart=Y
 ZNAMixpanel_AudioLanguageChange=Y
 ZNAMixpanel_SubtitleLanguageChange=Y
+ZNAMixpanel_CarousalBannerImpression=Y
+ZNAMixpanel_ScreenView=Y
 
 
 #-----Android DFP---------
