--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -43,8 +43,8 @@ Android_Consumption_Screen=Y
 Android_Downloads=Y
 AndroidApp_HLS=Y
 TasksAndDefects=Y
-
 DeepLinkValidation=N
+
 
 
 #----------WEBPWA MIXPANEL-----
@@ -82,6 +82,7 @@ ZNAMixpanel_AudioLanguageChange=Y
 ZNAMixpanel_SubtitleLanguageChange=Y
 ZNAMixpanel_CarousalBannerImpression=Y
 ZNAMixpanel_ScreenView=Y
+ZNAMixpanel_Onboarding=Y
 
 
 #-----Android DFP---------
