--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -117,3 +117,8 @@ SubscriptionCallReturnedEvent = Y
 
 Test=Y
 
+#------Android MIXPANEL--------
+ZNAMixpanel_Subscription=Y
+
+#-------Android Applicaster--------
+Android_TVOD_ComboOffer=Y
