--- a/pom.xml
+++ b/pom.xml
@@ -111,10 +111,16 @@
 			<version>4.0.9</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.jayway.restassured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>2.3.4</version>
+		</dependency> -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.3.0</version>
+			<!--<scope>test</scope> -->
 		</dependency>
 
 		<dependency>
@@ -221,6 +227,19 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.13.3</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1</version>
+		</dependency>	
+
+	    <dependency>
+		    <groupId>com.github.json-template</groupId>
+		    <artifactId>jsontemplate</artifactId>
+		    <version>0.2.1</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>com.epam.reportportal</groupId> <artifactId>agent-java-testng</artifactId> 
