--- a/properties/AppPackageActivity.properties
+++ b/properties/AppPackageActivity.properties
@@ -25,3 +25,5 @@ zeeTVPackage = com.graymatrix.did
 zeeTVActivity = com.zee5.player.activities.SplashActivity
 zeeTVVersion = 14.14.2
 zeeTVapkfile = ATV_B_443_ProdDeb_Sp-17_v18.0.0.51.apk
+
+#adb shell am start -n com.vodafone.vodafoneplay/com.myplex.vodafone.ui.activities.MainActivity
