--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -129,3 +129,7 @@ WebPWAComboOfferScript=Y
 VerifyURL=Y
 Android_Tasks=Y
 Android_Defects=Y
+
+#-------Android Applicaster--------
+Android_TVOD_ComboOffer=Y
+Android_AppPerformanceTest=Y
