--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -133,6 +133,7 @@ Android_Defects=Y
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
 Android_AppPerformanceTest=Y
+Android_WhatsAppFeature=Y
 
 
 #---AppsFlyer---
