--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -134,6 +134,7 @@ Android_Defects=Y
 Android_TVOD_ComboOffer=Y
 Android_AppPerformanceTest=Y
 Android_WhatsAppFeature=Y
+Android_AppUpgradeScenarios=Y
 
 
 #---AppsFlyer---
