--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -119,6 +119,8 @@ Test=Y
 
 #------Android MIXPANEL--------
 ZNAMixpanel_Subscription=Y
+AndroidMixpanel_PopUpEvents=Y
+AndroidMixpanel_RegistrationEvents=Y
 
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
