--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -121,6 +121,9 @@ Test=Y
 ZNAMixpanel_Subscription=Y
 AndroidMixpanel_PopUpEvents=Y
 AndroidMixpanel_RegistrationEvents=Y
+AndroidMixpanel_ThumbnailClick=Y
+AndroidMixpanel_VideoWatchDuration=Y
+AndroidMixpanel_SubscriptionJourneyEvents=Y
 
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
@@ -145,3 +148,5 @@ Appsflyer = Y
 
 #----CleverTap----
 cleverTap=Y
+
+
