--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -83,6 +83,21 @@ ZNAMixpanel_SubtitleLanguageChange=Y
 ZNAMixpanel_CarousalBannerImpression=Y
 ZNAMixpanel_ScreenView=Y
 ZNAMixpanel_Onboarding=Y
+AndroidMixpanel_AddToWatchlist=Y
+AndroidMixpanel_AddToWatchlistSuccessfull=Y
+AndroidMixpanel_RemoveFromWatchlist=Y
+AdroidMixpanel_AdView=Y
+AndroidMixpanel_AdClick=Y
+AndroidMixpanel_AdInitialized=Y
+AndroidMixpanel_DownloadClick=Y
+AndroidMixpanel_DownloadResult=Y
+AndroidMixpanel_DownloadStart=Y
+AndroidMixpanel_DownloadDelete=Y
+AndroidMixpanel_DisplayLanguageChanged=Y
+AndroidMixpanel_ContentLanguageChanged=Y
+AndroidMixpanel_PlayerViewChanged=Y
+AndroidMixpanel_ScreenView=Y
+AndroidMixpanel_SubscriptionPageViewed=Y
 
 
 #-----Android DFP---------
@@ -118,12 +133,27 @@ SubscriptionCallReturnedEvent = Y
 Test=Y
 
 #------Android MIXPANEL--------
-ZNAMixpanel_Subscription=Y
+AndroidMixpanel_P1_Events=Y
 AndroidMixpanel_PopUpEvents=Y
 AndroidMixpanel_RegistrationEvents=Y
 AndroidMixpanel_ThumbnailClick=Y
 AndroidMixpanel_VideoWatchDuration=Y
 AndroidMixpanel_SubscriptionJourneyEvents=Y
+AndroidMixpanel_ScreensectionVisited=Y
+AndroidMixpanel_SkipLogin=Y
+AdroidMixpanel_AdView=Y
+AndroidMixpanel_AdClick=Y
+AndroidMixpanel_AdInitialized=Y
+AndroidMixpanel_af_svod_first_episode_free_Event=Y
+AndroidMixpanel_CarousalBannerClick=Y
+AndroidMixpanel_CTAs=Y
+AndroidMixpanel_FirstLaunch=Y
+AndroidMixpanel_VideoView=Y
+AndroidMixpanel_DownloadClick=Y
+AndroidMixpanel_DownloadResult=Y
+AndroidMixpanel_DownloadStart=Y
+AndroidMixpanel_DisplayLanguageChanged=Y
+AndroidMixpanel_ContentLanguageChanged=Y
 
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
