--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -98,6 +98,8 @@ AndroidMixpanel_ContentLanguageChanged=Y
 AndroidMixpanel_PlayerViewChanged=Y
 AndroidMixpanel_ScreenView=Y
 AndroidMixpanel_SubscriptionPageViewed=Y
+AndroidMixpanel_ContentBucketSwipe=Y
+AndroidMixpanel_RibbonCTAs=Y
 
 
 #-----Android DFP---------
