--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -156,6 +156,8 @@ AndroidMixpanel_DownloadResult=Y
 AndroidMixpanel_DownloadStart=Y
 AndroidMixpanel_DisplayLanguageChanged=Y
 AndroidMixpanel_ContentLanguageChanged=Y
+AndroidMixpanel_ConsumptionSubscribeCTA=Y
+AndroidMixpanel_ManualRefresh=Y
 
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
