--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -184,8 +184,11 @@ Appsflyer = Y
 
 #----CleverTap----
 cleverTap=Y
-
-
 TvZee5TvperformanceScripts=Y
-
 Android_Conviva=Y
+
+
+
+#----SugarBox----
+Android_SugarboxTest=Y
+Android_SugarBox_OnboardingStream=Y
