--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -85,6 +85,7 @@ ZNAMixpanel_SubtitleLanguageChange=Y
 ZNAMixpanel_CarousalBannerImpression=Y
 ZNAMixpanel_ScreenView=Y
 ZNAMixpanel_Onboarding=Y
+
 AndroidMixpanel_AddToWatchlist=Y
 AndroidMixpanel_AddToWatchlistSuccessfull=Y
 AndroidMixpanel_RemoveFromWatchlist=Y
@@ -102,6 +103,67 @@ AndroidMixpanel_ScreenView=Y
 AndroidMixpanel_SubscriptionPageViewed=Y
 AndroidMixpanel_ContentBucketSwipe=Y
 AndroidMixpanel_RibbonCTAs=Y
+Android_Mixpanel_LIVETVsection_visited=Y
+AndroidMixpanel_af_preroll_adview=Y
+AndroidMixpanel_af_svod_first_episode_free_Event=Y
+AndroidMixpanel_CTAs=Y
+AndroidMixpanel_consumption_subscribe_cta_click=Y
+AndroidMixpanel_ConsumptionSubscribeCTA=Y
+AndroidMixpanel_ContentBucketSwipe=Y
+AndroidMixpanel_ContentLanguageChanged=Y
+AndroidMixpanel_CarousalBannerCTAs=Y
+AndroidMixpanel_CarousalBannerClick=Y
+AndroidMixpanel_AutoSeek=Y
+AndroidMixpanel_CarousalBannerSwipe=Y
+AndroidMixpanel_ChangePasswordResult=Y
+AndroidMixpanel_ChangePasswordStarted=Y
+AndroidMixpanel_DefaultSettingsRestored=Y
+AndroidMixpanel_DownloadOverWifiChanged=Y
+AndroidMixpanel_DownloadQualityChanged=Y
+AndroidMixpanel_Downloadsection_visited=Y
+AndroidMixpanel_Homepage_visited=Y
+AndroidMixpanel_LoginInitiated=Y
+AndroidMixpanel_LoginRegistrationScreenDisplay=Y
+AndroidMixpanel_LoginResult=Y
+AndroidMixpanel_LoginScreenDisplay=Y
+AndroidMixpanel_FirstLaunch=Y
+AndroidMixpanel_Logout=Y
+AndroidMixpanel_ManualRefresh=Y
+AndroidMixpanel_Moresection_visited=Y
+AndroidMixpanel_PackToggle=Y
+AndroidMixpanel_PopUpEvents=Y
+AndroidMixpanel_PromoCodeResult=Y
+AndroidMixpanel_RegisterScreenDisplay=Y
+AndroidMixpanel_RegistrationEvents=Y
+AndroidMixpanel_RentalPurchaseCallInitiated=Y
+AndroidMixpanel_RentalPurchaseCallReturned=Y
+AndroidMixpanel_ScreensectionVisited=Y
+AndroidMixpanel_ScrubSeek=Y
+AndroidMixpanel_Search=Y
+AndroidMixpanel_SettingChanged=Y
+AndroidMixpanel_Share=Y
+AndroidMixpanel_SkipLogin=Y
+AndroidMixpanel_SubscriptionJourneyEvents=Y
+AndroidMixpanel_SubscriptionSelected=Y
+AndroidMixpanel_SubtitleLanguageChange=Y
+AndroidMixpanel_Svod_content_view=Y
+AndroidMixpanel_Tab_View=Y
+AndroidMixpanel_ThumbnailClick=Y
+AndroidMixpanel_TVShows_Content_Play=Y
+AndroidMixpanel_TVShowsSection_visited=Y
+AndroidMixpanel_UpcomingSection_visited=Y
+AndroidMixpanel_VideoClick1=Y
+AndroidMixpanel_VideoClick3=Y
+AndroidMixpanel_VideoClick5=Y
+AndroidMixpanel_Videos_Content_Play=Y
+AndroidMixpanel_VideoStreamingAutoplayChanged=Y
+AndroidMixpanel_VideoStreamingOverWifiChanged=Y
+AndroidMixpanel_VideoStreamingQualityChanged=Y
+AndroidMixpanel_VideoView=Y
+AndroidMixpanel_VideoWatchDuration=Y
+AndroidMixpanel_WatchTrailerClicked=Y
+AndroidMixpanel_WidgetCTAs=Y
+
 
 
 #-----Android DFP---------
@@ -138,28 +200,7 @@ Test=Y
 
 #------Android MIXPANEL--------
 AndroidMixpanel_P1_Events=Y
-AndroidMixpanel_PopUpEvents=Y
-AndroidMixpanel_RegistrationEvents=Y
-AndroidMixpanel_ThumbnailClick=Y
-AndroidMixpanel_VideoWatchDuration=Y
-AndroidMixpanel_SubscriptionJourneyEvents=Y
-AndroidMixpanel_ScreensectionVisited=Y
-AndroidMixpanel_SkipLogin=Y
-AdroidMixpanel_AdView=Y
-AndroidMixpanel_AdClick=Y
-AndroidMixpanel_AdInitialized=Y
-AndroidMixpanel_af_svod_first_episode_free_Event=Y
-AndroidMixpanel_CarousalBannerClick=Y
-AndroidMixpanel_CTAs=Y
-AndroidMixpanel_FirstLaunch=Y
-AndroidMixpanel_VideoView=Y
-AndroidMixpanel_DownloadClick=Y
-AndroidMixpanel_DownloadResult=Y
-AndroidMixpanel_DownloadStart=Y
-AndroidMixpanel_DisplayLanguageChanged=Y
-AndroidMixpanel_ContentLanguageChanged=Y
-AndroidMixpanel_ConsumptionSubscribeCTA=Y
-AndroidMixpanel_ManualRefresh=Y
+
 
 #-------Android Applicaster--------
 Android_TVOD_ComboOffer=Y
@@ -186,7 +227,6 @@ Appsflyer = Y
 cleverTap=Y
 TvZee5TvperformanceScripts=Y
 Android_Conviva=Y
-
 
 
 #----SugarBox----
