--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -163,7 +163,7 @@ AndroidMixpanel_VideoView=Y
 AndroidMixpanel_VideoWatchDuration=Y
 AndroidMixpanel_WatchTrailerClicked=Y
 AndroidMixpanel_WidgetCTAs=Y
-
+Android_AppDeeplinksValidation=Y
 
 
 #-----Android DFP---------
@@ -232,3 +232,4 @@ Android_Conviva=Y
 #----SugarBox----
 Android_SugarboxTest=Y
 Android_SugarBox_OnboardingStream=Y
+
