--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -228,8 +228,10 @@ cleverTap=Y
 TvZee5TvperformanceScripts=Y
 Android_Conviva=Y
 
-
 #----SugarBox----
-Android_SugarboxTest=Y
-Android_SugarBox_OnboardingStream=Y
+Android_SugarboxTest_HLS=Y
+Android_SugarBox_OnboardingNotification=Y
+Android_SugarBox_PlaybackTest=Y
+
+Android_AppCenter=Y
 
