--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -85,7 +85,6 @@ ZNAMixpanel_SubtitleLanguageChange=Y
 ZNAMixpanel_CarousalBannerImpression=Y
 ZNAMixpanel_ScreenView=Y
 ZNAMixpanel_Onboarding=Y
-
 AndroidMixpanel_AddToWatchlist=Y
 AndroidMixpanel_AddToWatchlistSuccessfull=Y
 AndroidMixpanel_RemoveFromWatchlist=Y
@@ -164,6 +163,9 @@ AndroidMixpanel_VideoWatchDuration=Y
 AndroidMixpanel_WatchTrailerClicked=Y
 AndroidMixpanel_WidgetCTAs=Y
 Android_AppDeeplinksValidation=Y
+Android_AR33_ContentDescriptor=Y
+Android_AR33_ParentalControl=Y
+Android_AR33_GrievanceRedressal=Y
 
 
 #-----Android DFP---------
