--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -10,6 +10,8 @@ AndroidPWASmokeScript=Y
 
 #PWA SANITY ANDROID
 AndroidPWASanityScript=Y
+WebPWAInSprintScript=Y
+WebPWAPerformanceTest=Y
 
 #PWA SANITY WEB
 WebPWASanityScript=Y
@@ -236,4 +238,6 @@ Android_SugarBox_OnboardingNotification=Y
 Android_SugarBox_PlaybackTest=Y
 
 Android_AppCenter=Y
+
+
 
