--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -221,6 +221,7 @@ Android_TVOD_ComboOffer=Y
 Android_AppPerformanceTest=Y
 Android_WhatsAppFeature=Y
 Android_AppUpgradeScenarios=Y
+Android_ChromeCast=Y
 
 
 #---AppsFlyer---
