--- a/properties/ExecutionControl.properties
+++ b/properties/ExecutionControl.properties
@@ -172,15 +172,15 @@ Android_AR33_GrievanceRedressal=Y
 
 #-----Android DFP---------
 AMDDFPTestScript=Y
-
 AndroidPWADFPScript=Y
 WebPWADFPScript=Y
-
 ZNAMixpanel_OnboardingSuite=Y
 ZNAMixpanel_Journey=Y
 ZNAMixpanel_PlayerEvents=Y
-
 AndroidApp_PerformanceCheck=Y
+
+#------Android VMAX------
+AMDVMAXTestScript=Y
 
 #---Onboarding---
 SkipRegistrationEvent=Y
@@ -199,7 +199,6 @@ PrepaidCodeResultEvent=Y
 PromoCodeResultEvent=Y
 SubscriptionCallInitiatedEvent=Y
 SubscriptionCallReturnedEvent = Y 
-
 Test=Y
 
 #------Android MIXPANEL--------
